# wildon-api-v2

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
crates/common/: Cargo.toml
crates/common/src/: ids.rs  lib.rs  time.rs  utils.rs
crates/common/src/http/: json.rs  mod.rs  pagination.rs  response.rs
docs/: ARCHITECTURE_BLUEPRINT.md  (+6 more)
services/api-clients-service/: Cargo.toml  Dockerfile
services/api-clients-service/migrations/: 0001_init.sql  0002_production_api_clients.sql  0003_control_dashboard_public_clients.sql  0004_control_dashboard_surface_control.sql  0005_public_platform_clients.sql  README.md
services/api-clients-service/migrations/rollback/: 0001_init.sql  0002_production_api_clients.sql
services/api-clients-service/seeds/: README.md
services/api-clients-service/seeds/baseline/: 0001_seed.sql  0002_production_api_clients.sql
services/api-clients-service/src/: main.rs  state.rs
services/api-clients-service/src/modules/: mod.rs
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/migrations/: 0001_init.sql  0002_session_architecture.sql  0003_identity_phase3_phase4.sql  0004_oauth_phase5_phase6.sql  0005_session_management_remember_me.sql  0006_mfa_authenticator.sql  0007_mfa_backup_codes.sql  0008_default_login_accounts.sql  0009_dashboard_test_accounts.sql  README.md
services/auth-service/migrations/rollback/: 0001_init.sql  0002_session_architecture.sql  0003_identity_phase3_phase4.sql  0004_oauth_phase5_phase6.sql  0005_session_management_remember_me.sql  0006_mfa_authenticator.sql  0007_mfa_backup_codes.sql
services/auth-service/seeds/baseline/: 0001_seed.sql  0002_default_control_users.sql
services/auth-service/src/: main.rs  routes.rs  state.rs
services/auth-service/src/modules/: mod.rs
services/billing-service/: Cargo.toml  Dockerfile
services/billing-service/migrations/: 0001_init.sql  0002_device_billing.sql  README.md
services/billing-service/migrations/rollback/: 0001_init.sql
services/billing-service/seeds/: README.md
services/billing-service/seeds/baseline/: 0001_seed.sql
services/billing-service/src/: invoice_template.rs  main.rs  state.rs
services/billing-service/src/modules/: device_subscriptions.rs  display_ref.rs  invoices_v2.rs  mod.rs  payment_methods.rs  refunds.rs  stripe_client.rs  subscription_plans.rs
services/chat-service/: Cargo.toml  Dockerfile
services/chat-service/src/: events.rs  handlers.rs  main.rs  messages.rs  queue.rs  state.rs  ws.rs
services/control-service/: Cargo.toml  Dockerfile
services/control-service/migrations/: 0001_init.sql  0002_notification_templates.sql  0003_invoice_settings.sql  0004_email_template_names.sql  0005_device_management.sql  0006_audit_accounts.sql  0006_regions_and_system_api.sql  0007_incident_tracking.sql  0008_registry.sql  0009_support_tickets.sql  0010_live_chat.sql  0010_system_apps.sql  0011_device_configuration.sql  0012_api_integration_settings.sql  0013_restore_fixed_apps.sql  0014_regions_is_primary.sql  0015_regions_services.sql
services/control-service/migrations/rollback/: 0001_init.sql  0002_notification_templates.sql  0003_invoice_settings.sql  0004_email_template_names.sql  0006_audit_accounts.sql  0007_incident_tracking.sql  0008_registry.sql  0009_support_tickets.sql  0010_system_apps.sql  0011_device_configuration.sql  0012_api_integration_settings.sql  0014_regions_is_primary.sql  0015_regions_services.sql
services/control-service/seeds/: README.md
services/control-service/seeds/baseline/: 0001_seed.sql  0002_email_templates.sql
services/control-service/src/: main.rs  routes.rs  state.rs
services/control-service/src/modules/: mod.rs
services/core-service/: Cargo.toml  Dockerfile
services/core-service/migrations/: 0001_init.sql
services/core-service/migrations/rollback/: 0001_init.sql
services/core-service/seeds/baseline/: 0001_seed.sql
services/core-service/src/: main.rs  state.rs
services/core-service/src/domain/: mod.rs
services/core-service/src/modules/: mod.rs
services/export-service/: Cargo.toml  Dockerfile
services/export-service/migrations/: 0001_init.sql
services/export-service/migrations/rollback/: 0001_init.sql
services/export-service/seeds/baseline/: 0001_seed.sql
services/export-service/src/: main.rs  state.rs
services/export-service/src/modules/: mod.rs
services/gateway-service/: Cargo.toml  Dockerfile
services/gateway-service/src/: error.rs  main.rs  routes.rs  state.rs
services/gateway-service/src/clients/: mod.rs
services/gateway-service/src/middleware/: audit_log.rs  authorization_policy.rs  call_counter.rs  client_identity.rs  csrf.rs  json_security.rs  jwt_validate.rs  mod.rs  rate_limit.rs  realm_enforce.rs
services/gateway-service/src/routing/: host_router.rs  mod.rs  service_map.rs
services/logs-service/: Cargo.toml  Dockerfile
services/logs-service/migrations/: 0001_init.sql  0002_canonical_audit_ledger.sql
services/logs-service/migrations/rollback/: 0001_init.sql
services/logs-service/src/: main.rs  state.rs
services/platform-service/: Cargo.toml  Dockerfile
services/platform-service/migrations/: 0001_init.sql  0002_persistence_and_audit.sql
services/platform-service/src/: main.rs  routes.rs  state.rs
services/public-service/: Cargo.toml  Dockerfile
services/public-service/migrations/: 0001_init.sql  0002_users_devices.sql  0003_owner_id_futureproof.sql  0004_profile_timezone.sql  0005_name_fields.sql
services/public-service/src/: main.rs  routes.rs  state.rs
services/storage-service/: Cargo.toml  Dockerfile
services/storage-service/migrations/: 0001_init.sql
services/storage-service/src/: main.rs  state.rs
services/users-service/: Cargo.toml  Dockerfile
services/users-service/migrations/: 0001_init.sql  0002_users_timezone.sql  0003_user_settings.sql  0004_default_login_accounts.sql  0005_account_number.sql  0006_dashboard_test_accounts.sql  0006_user_scope_assignments.sql  0007_name_fields.sql  README.md
services/users-service/seeds/: README.md
services/users-service/src/: main.rs  state.rs
(+234 files in other folders)
