[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
axum.workspace = true
base64.workspace = true
chrono.workspace = true
errors = { path = "../errors" }
serde.workspace = true
serde_json.workspace = true
serde_ignored = "0.1"
uuid.workspace = true
