[package]
name = "api-clients-service"
version.workspace = true
edition.workspace = true

[dependencies]
argon2 = "0.5"
async-nats = "0.37"
chrono.workspace = true
contracts = { path = "../../crates/contracts" }
config = { path = "../../crates/config" }
observability = { path = "../../crates/observability" }
rand = "0.8"
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
uuid.workspace = true
