[package]
name = "gateway-service"
version.workspace = true
edition.workspace = true

[dependencies]
async-nats = "0.37"
auth = { path = "../../crates/auth" }
axum.workspace = true
base64.workspace = true
common = { path = "../../crates/common" }
contracts = { path = "../../crates/contracts" }
config = { path = "../../crates/config" }
errors = { path = "../../crates/errors" }
futures-util = "0.3"
logs-sdk = { path = "../../crates/logs-sdk" }
middleware = { path = "../../crates/middleware" }
observability = { path = "../../crates/observability" }
rate-limit = { path = "../../crates/rate-limit" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
uuid.workspace = true
redis = { version = "0.27", features = ["tokio-comp"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
