[package]
name = "logs-service"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
contracts = { path = "../../crates/contracts" }
config = { path = "../../crates/config" }
observability = { path = "../../crates/observability" }
hex = "0.4"
serde_json.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
uuid.workspace = true
