[package]
name = "users-service"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz = "0.10"
contracts = { path = "../../crates/contracts" }
config = { path = "../../crates/config" }
observability = { path = "../../crates/observability" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
storage-sdk = { path = "../../crates/storage-sdk" }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tracing.workspace = true
uuid.workspace = true
